<resources>
    <string name="app_name">Calculator</string>
    <string name="you_have_been_hacked_if_you_click_the_button">You have been hacked if you click the button!!!!</string>
    <string name="_1">1</string>
    <string name="textview">TextView</string>
    <string name="_2">2</string>
    <string name="add">+</string>
    <string name="displaytext">=</string>
    <string name="_3">3</string>
    <string name="btn4">4</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="dot">.</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="s">-</string>
    <string name="_8">8</string>
    <string name="m">*</string>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="p">%</string>
    <string name="e">=</string>
    <string name="del">del</string>
    <string name="h">/</string>
    <string name="_9">9</string>
    <string name="clear_all">clear all</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>